# ROB_590_MSFS_ROS_Bridge

./: CMakeLists.txt  README.md  package.xml
src/: msfs_control_node.cpp  msfs_sensor_node.cpp  record_msfs_commands.py
src/bags/msfs_commands_20260322_134008/: metadata.yaml  msfs_commands_20260322_134008_0.db3
src/bags/msfs_commands_20260322_140222/: metadata.yaml  msfs_commands_20260322_140222_0.db3
